# llm-20-Questions

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: build-check.yml
notebook/: main.ipynb
src/: gpt.py
