[tool.poetry]
name = "llm-20-questions"
version = "0.1.0"
description = ""
authors = ["github-actions <jojoto8845@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.41.2"
torch = "^2.3.0"
python-dotenv = "^1.0.1"
google = "^3.0.0"
ipykernel = "^6.29.4"
kaggle = "^1.6.14"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
